@startuml
class Juego {
  - jugadores : List<Jugador>
  - indiceTurno : int
  - estado : Estado
  + agregarJugador(nombre, color)
  + iniciar()
  + getJugadorEnTurno() : Jugador
  + lanzarDado() : int
  + siguienteTurno()
}

class Jugador {
  - id : String
  - nombre : String
  - color : String
  - tiros : List<int>
  + registrarTiro(valor:int)
}

class Dado {
  + lanzar() : int
}

Juego "1" o-- "*" Jugador
Juego "1" o-- "1" Dado
@enduml
